--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
-        android:angle="315"
-        android:centerX="40%"
-        android:startColor="#364EA6"
-        android:centerColor="#090C19"
-        android:endColor="#000000"
+        android:angle="90"
+        android:centerX="50%"
+        android:startColor="#2C2E35"
+        android:centerColor="#2C2E35"
+        android:endColor="#2D3150"
         android:type="linear"
         />
     <size
