--- a/app/src/main/res/drawable/shape_vertical_white_line.xml
+++ b/app/src/main/res/drawable/shape_vertical_white_line.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="80dp"
+        android:radius="15dp"
         />
     <size
-        android:width="200dp"
-        android:height="200dp"
+        android:width="2dp"
+        android:height="1000dp"
         />
-    <stroke
-        android:width="10dp"
-        android:color="#3C4A61"
+
+    <solid
+        android:color="@color/white"
         />
 </shape>
